--- a/index.html
+++ b/index.html
@@ -26,23 +26,21 @@
     <div class="parent">
 
         
-        <img class="div1" src="asset/dog.jpg" alt="original tiger">
+        <img class="div1" src="asset/asciiDog.png" alt="Milo le chien en lettre">
 
         <div2 class="div2">
-            <p class="divTitle">Convertion d'image JPEG</p>
+            <p class="divTitle">Génération d'image ASCII-Art</p>
             <br>
-            <p class="divText">Séléctionner une image au format JPEG, 
-                de la résolution que vous souhaitez</p>
+            <p class="divText">L'ASCII-Art consite a créer une image constitué uniquement
+                de caractère provnant du codage ASCII.</p>
         </div2>
 
         <div3 class="div3">
-            <p class="divTitle">ASCII-Art avec n'importe quelle Image !</p>
+            <p class="divTitle">A partir d'une image *.jpg !</p>
             <br>
-            <p class="divText">Les pixels, composants la photo, sont converti en lettre
-                en fonction de leur nuance de gris. Les lettres gardent la couleur du pixel
-                original</p>
+            <p class="divText">Le programme va redimmensionner l'image, et remplacer chaque pixel par une lettre en fonction des nuances de gris</p>
         </div3>
-        <img class="div4" src="asset/asciiDog.png" alt="Ascii Dog">
+        <img class="div4" src="asset/dog.jpg" alt="Milo le chien">
         <img class="div5" src="asset/quality.jpg" alt="Quality select Window">
 
         <div6 class="div6">
@@ -53,6 +51,14 @@
 
             </p>
         </div6>
+        <div7 class="div7">
+            <p class="divTitle">Haute qualité d'image supporté !</p>
+            <br>
+            <p class="divText">En fonction du pourcentage de pixel conservés que vous avez définit;
+                l'image sera très définit même si ce n'est que des caractère ASCII !
+            </p>
+        </div7>
+        <img class="div8" src="asset/cheinHQ.png" alt="Milo Haute qualité"">
     </div>
     
 </body>
